# prueba

./: CMakeLists.txt  contours.cpp  contours_inex.cpp  contours_th.cpp  edges.cpp  histogram.cpp  histogram_rc.cpp  mocap.cpp
